# Workflows-MCP

./: Dockerfile  README.md  SKILL_CREATION.md  pyproject.toml
apps/web/src/app/: page.tsx
apps/web/src/app/api/pipeline/stream/: route.ts
skills/apollo-clay-leads/: SKILL.md
skills/apollo-clay-leads/scripts/: clarify_query.py  export.py  fetch_apify_linkedin.py  fetch_apollo_api.py  parse_query.py  run_pipeline.py  score.py
skills/content-flywheel-orchestrator/: SKILL.md
skills/content-research/: SKILL.md
skills/hello-world/: SKILL.md
skills/hello-world/scripts/: greet.py
skills/linkedin-post-adapter/: SKILL.md
skills/newsletter-expander/: SKILL.md
skills/slack-message/: SKILL.md
skills/slack-message/scripts/: post.py
skills/twitter-thread-generator/: SKILL.md
skills/twitter-thread-generator/references/: hook-formulas.md
src/: __init__.py  http_server.py  mcp_http_server.py  server.py
