[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skills-mcp"
version = "0.2.0"
description = "A Model Context Protocol server for discovering, loading, and executing Agent Skills"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "YoruLabs" }
]
keywords = ["mcp", "skills", "agent-skills", "automation", "ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
skills-mcp = "src.server:main"

[project.urls]
Homepage = "https://github.com/YoruLabs/Skills-MCP"
Repository = "https://github.com/YoruLabs/Skills-MCP"
Issues = "https://github.com/YoruLabs/Skills-MCP/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
